--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -9,9 +9,10 @@
     <ImageView
         android:id="@+id/img_movie_poster"
         android:layout_width="match_parent"
-        android:layout_height="280dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="220dp"
         app:layout_constraintTop_toTopOf="parent"
+        android:scaleType="fitXY"
+        app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintBottom_toTopOf="@id/text_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,10 +24,10 @@
         android:layout_height="wrap_content"
         android:text="Movie Title"
         android:textSize="22sp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@id/img_movie_poster"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
