--- a/app/src/main/res/layout/res_movie.xml
+++ b/app/src/main/res/layout/res_movie.xml
@@ -2,13 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="4dp">
 
         <ImageView
             android:id="@+id/img_movie"
-            android:layout_width="130dp"
-            android:layout_height="180dp"
+            android:layout_width="160dp"
+            android:layout_height="220dp"
             android:src="@drawable/ic_launcher_background"
+            android:scaleType="fitXY"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
