--- a/app/src/main/res/layout/res_movie.xml
+++ b/app/src/main/res/layout/res_movie.xml
@@ -5,11 +5,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="4dp">
 
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/movie_shimmer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+                <View
+                    android:layout_width="160dp"
+                    android:layout_height="220dp"
+                    android:background="@color/grey"/>
+
+        </com.facebook.shimmer.ShimmerFrameLayout>
+
         <ImageView
             android:id="@+id/img_movie"
             android:layout_width="160dp"
             android:layout_height="220dp"
-            android:src="@drawable/ic_launcher_background"
             android:scaleType="fitXY"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
