--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -10,11 +10,24 @@
         android:id="@+id/home_fragment"
         android:name="devandroid.zeglan.movies.view.HomeFragment"
         android:label="Home"
-        tools:layout="@layout/fragment_home"/>
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_home_fragment_to_movieDetailsFragment"
+            app:destination="@id/movieDetailsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/watch_fragment"
         android:name="devandroid.zeglan.movies.view.WatchListFragment"
         android:label="WatchList"
         tools:layout="@layout/fragment_watch_list" />
+    <fragment
+        android:id="@+id/movieDetailsFragment"
+        android:name="devandroid.zeglan.movies.view.MovieDetailsFragment"
+        android:label="MovieDetailsFragment" >
+        <argument
+            android:name="movieId"
+            app:argType="integer"
+            android:defaultValue="550" />
+    </fragment>
 
 </navigation>
