--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="grey">#888</color>
+    <color name="grey">#b3b2b1</color>
+    <color name="green">#2AA18B</color>
 </resources>
