--- a/app/src/main/res/layout/fragment_watch_list.xml
+++ b/app/src/main/res/layout/fragment_watch_list.xml
@@ -4,15 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.WatchListFragment">
+    tools:context=".view.WatchListFragment"
+    android:layout_margin="16dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="TESTE"/>
+      <androidx.recyclerview.widget.RecyclerView
+          android:id="@+id/recycler_detailed_movies"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_marginBottom="64dp"
+          app:layout_constraintTop_toTopOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          tools:listitem="@layout/res_detailed_movie"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
