--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,5 +10,14 @@
         <item name="cornerSize">50%</item>
     </style>
 
+    <style name="Button" parent="Widget.AppCompat.Button.Borderless">
+        <item name="iconPadding">0dp</item>
+        <item name="iconSize">28dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:paddingLeft">0dp</item>
+        <item name="android:paddingRight">0dp</item>
+    </style>
+
     <style name="Theme.Movies" parent="Base.Theme.Movies" />
 </resources>
